changed all votemeters and related overlays to fixed height and adjusted boxes to calculate necessary spacing height

--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -17,15 +17,16 @@
 }
 
 .overlay {
-	font-size: 12pt;
-	font-weight: 300;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	text-align: center;
 }
 
 .tag {
-	height: 15.56%;
+	font-size: 10pt;
+	line-height: 14px;
+	font-weight: 300;
+	height: 14px;
 	background: rgba(0,0,0,0.5);
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
@@ -56,10 +57,10 @@
 }
 
 .votes {
-	border-bottom-left-radius: 5px;
-	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
 	position: relative;
-	height: 14.44%;
+	height: 12px;
 	bottom: 0px;
 }
 
@@ -88,13 +89,16 @@
 	position: relative;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	font-weight: 300;
-	font-size: 12pt;
+	font-size: 9pt;
+	line-height: 12px;
 }
 
 .grid {
 	overflow-x: hidden;
 	overflow-y: auto;
-	margin: 1.75%;
+	padding: 0 1.75%;
+	position: relative
+	left: 6px;
 }
 
 #bigpic {
