--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,9 @@ a {
 }
 
 .smallpadded {
-	padding: 5px;
+	padding: 2px;
+	font-size: 11pt;
+	font-weight: 300;
 }
 
 .padded {
